core/codegen_next/tests/ui-fail/responder-types.stderr
error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:10:5
   |
10 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:17:5
   |
17 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `u8: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/responder-types.rs:23:5
   |
23 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:25:5
   |
25 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/responder-types.rs:33:5
   |
33 |     then: String,
   |     ^^^^^^^^^^^^ the trait `std::convert::From<std::string::String>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
             rocket::http::Header<'static> as $TRAIT
           and $N others
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `std::string::String`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
